<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="14dp"
    >

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="5dp"
        android:src="@drawable/food_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingLeft="10dp"
            android:text="Item Name"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/itemQuantityLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingLeft="10dp"
            android:text="Quantity"
            android:textColor="#a9a9ae"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/itemOwnerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingLeft="10dp"
            android:text="@string/owner_name"
            android:textColor="#a9a9ae"
            android:textSize="17sp"
            android:textStyle="bold"
            android:paddingStart="10dp" />

        <TextView
            android:id="@+id/itemOwnerPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingLeft="10dp"
            android:text="@string/owner_phone"
            android:textColor="#a9a9ae"
            android:textSize="17sp"
            android:textStyle="bold"
            android:paddingStart="10dp" />

        <TextView
            android:id="@+id/itemOwnerAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingLeft="10dp"
            android:text="@string/owner_address"
            android:textColor="#a9a9ae"
            android:textSize="17sp"
            android:textStyle="bold"
            android:paddingStart="10dp" />

    </LinearLayout>



</LinearLayout>
